--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,13 +1,12 @@
 #logo{
-  padding-left: 20px;
-  padding-top: 20px;
-  width: 128px;
-  height: 128px;
+  width: 100px;
+  height: 100px;
+  margin: 20px 0px 0px 20px;
 }
 
 .nav{
-  height: 128px;
-  width: 128px;
+  height: 100px;
+  width: 100px;
   float: right;
   margin: 20px 20px 0px 0px;
 }
