--- a/views/fullcalendar.ejs
+++ b/views/fullcalendar.ejs
@@ -7,13 +7,11 @@
 	<link href='css/fullcalendar.print.css' rel='stylesheet' media='print' type="text/css">
 	
 	<!--jQuery-->
-	<script src='https://code.jquery.com/jquery-1.12.0.min.js'></script>
-	<script src='vendor/jquery-ui-1.10.3.custom.min.js'></script>
-	
-	<script src=></script>
-	
+	<script src='https://code.jquery.com/jquery-1.9.0.min.js'></script>
+	<script src='vendor/jquery-ui-1.10.2.custom.min.js'></script>
+		
 	<!--FullCalendar-->
-	<script src='vendor/fullcalendar.min.js'></script>
+	<script src='vendor/fullcalendar.js'></script>
 	<script type="text/javascript">
 		
 		/*
