--- a/views/mandal_main.ejs
+++ b/views/mandal_main.ejs
@@ -11,23 +11,18 @@
 	<script src="/js/vendor/jquery.zoomooz.min.js"></script>
     
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
-    <link rel="stylesheet" type="text/css" href="../css/mandal_main.css">
-	<link rel="stylesheet" type="text/css" href="../css/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/mandal_main.css">
+	<link rel="stylesheet" type="text/css" href="/css/style.css">
     
 	<script type='text/javascript'>
 		$(document).ready(function() {
 			$('#sendData').on('click', function() {
-				var finalTar = jQuery.parseJSON('<%- JSON.stringify(jsonObj.FinalTarget) %>');
-				var subTar = jQuery.parseJSON('<%- JSON.stringify(jsonObj.subTargets) %>');
-				var actions = jQuery.parseJSON('<%- JSON.stringify(jsonObj.actions) %>');
-                
-				$.each(subTar, function(index, value) {
-                    console.log(subTar[index].article);
-                });
-				
-				$.each(actions, function(index, value) {
-                    console.log(actions[index].article);
-                });
+				var mandalData = jQuery.parseJSON('<%- JSON.stringify(jsonObj) %>');
+
+				$('.table-article').each(function(index) {
+					$(this).children('.text-field').text(mandalData[index])
+					.next('.hidden-field').val(mandalData[index]);
+				});
 			}); 
 		});
 	</script>
@@ -42,11 +37,215 @@
 	</header>
 	
 	<section>
-		
-		<input type="button" value='확인' id='sendData'>		
-		
+		<form action="/mandal/main" method="POST">
+			<div class='zoomViewport'>
+				<div class='zoomContainer' id='mandal-container'>
+						<div class='mandal-top' id='mandal1'>
+							<table class="mandal-table">
+								<tr>
+								<td class="table-article"></td>
+								<td class="table-article"></td>
+								<td class="table-article"></td>
+								</tr>
+
+								<tr>
+								<td class="table-article"></td>
+								<td class="table-article zoomTarget center"></td>
+								<td class="table-article"></td>
+								</tr>
+
+								<tr>
+								<td class="table-article"></td>
+								<td class="table-article"></td>
+								<td class="table-article"></td>
+								</tr>
+							</table>
+						</div>
+						
+						<div class='mandal-top' id='mandal2'>
+							<table class="mandal-table">
+								<tr>
+								<td class="table-article"></td>
+								<td class="table-article"></td>
+								<td class="table-article"></td>
+								</tr>
+
+								<tr>
+								<td class="table-article"></td>
+								<td class="table-article zoomTarget center"></td>
+								<td class="table-article"></td>
+								</tr>
+
+								<tr>
+								<td class="table-article"></td>
+								<td class="table-article"></td>
+								<td class="table-article"></td>
+								</tr>
+							</table>
+						</div>
+						
+						<div class='mandal-top' id='mandal3'>
+							<table class="mandal-table">
+								<tr>
+								<td class="table-article"></td>
+								<td class="table-article"></td>
+								<td class="table-article"></td>
+								</tr>
+
+								<tr>
+								<td class="table-article"></td>
+								<td class="table-article zoomTarget center"></td>
+								<td class="table-article"></td>
+								</tr>
+
+								<tr>
+								<td class="table-article"></td>
+								<td class="table-article"></td>
+								<td class="table-article"></td>
+								</tr>
+							</table>
+						</div>
+						
+						
+						<div class='mandal-mid' id='mandal4'>
+							<table class="mandal-table">
+								<tr>
+								<td class="table-article"></td>
+								<td class="table-article"></td>
+								<td class="table-article"></td>
+								</tr>
+
+								<tr>
+								<td class="table-article"></td>
+								<td class="table-article zoomTarget center"></td>
+								<td class="table-article"></td>
+								</tr>
+
+								<tr>
+								<td class="table-article"></td>
+								<td class="table-article"></td>
+								<td class="table-article"></td>
+								</tr>
+							</table>
+						</div>
+						
+						<div class='mandal-center'>
+							<table class="mandal-table">
+								<tr>
+								<td class="table-article zoomTarget" id="mandal-zoom1"></td>
+								<td class="table-article zoomTarget" id="mandal-zoom2"></td>
+								<td class="table-article zoomTarget" id="mandal-zoom3"></td>
+								</tr>
+
+								<tr>
+								<td class="table-article zoomTarget" id="mandal-zoom4"></td>
+								<td class="table-article zoomTarget" id="zoom-center"></td>
+								<td class="table-article zoomTarget" id="mandal-zoom5"></td>
+								</tr>
+
+								<tr>
+								<td class="table-article zoomTarget" id="mandal-zoom6"></td>
+								<td class="table-article zoomTarget" id="mandal-zoom7"></td>
+								<td class="table-article zoomTarget" id="mandal-zoom8"></td>
+								</tr>
+							</table>
+						</div>
+						
+						<div class='mandal-mid' id='mandal5'>
+							<table class="mandal-table">
+								<tr>
+								<td class="table-article"></td>
+								<td class="table-article"></td>
+								<td class="table-article"></td>
+								</tr>
+
+								<tr>
+								<td class="table-article"></td>
+								<td class="table-article zoomTarget center"></td>
+								<td class="table-article"></td>
+								</tr>
+
+								<tr>
+								<td class="table-article"></td>
+								<td class="table-article"></td>
+								<td class="table-article"></td>
+								</tr>
+							</table>
+						</div>
+						
+
+						<div class='mandal-bot' id='mandal6'>
+							<table class="mandal-table">
+								<tr>
+								<td class="table-article"></td>
+								<td class="table-article"></td>
+								<td class="table-article"></td>
+								</tr>
+
+								<tr>
+								<td class="table-article"></td>
+								<td class="table-article zoomTarget center"></td>
+								<td class="table-article"></td>
+								</tr>
+
+								<tr>
+								<td class="table-article"></td>
+								<td class="table-article"></td>
+								<td class="table-article"></td>
+								</tr>
+							</table>
+						</div>
+						
+						<div class='mandal-bot' id='mandal7'>
+							<table class="mandal-table">
+								<tr>
+								<td class="table-article"></td>
+								<td class="table-article"></td>
+								<td class="table-article"></td>
+								</tr>
+
+								<tr>
+								<td class="table-article"></td>
+								<td class="table-article zoomTarget center"></td>
+								<td class="table-article"></td>
+								</tr>
+
+								<tr>
+								<td class="table-article"></td>
+								<td class="table-article"></td>
+								<td class="table-article"></td>
+								</tr>
+							</table>
+						</div>
+						
+						<div class='mandal-bot' id='mandal8'>
+							<table class="mandal-table">
+								<tr>
+								<td class="table-article"></td>
+								<td class="table-article"></td>
+								<td class="table-article"></td>
+								</tr>
+
+								<tr>
+								<td class="table-article"></td>
+								<td class="table-article zoomTarget center"></td>
+								<td class="table-article"></td>
+								</tr>
+
+								<tr>
+								<td class="table-article"></td>
+								<td class="table-article"></td>
+								<td class="table-article"></td>
+								</tr>
+							</table>
+						</div>
+				</div>
+			</div>
+			
+			<input type="button" value='Get From Server' id='sendData'>
+			<input type="submit" value="Send To Server" id='getData'>		
+		</form>
 	</section>
-	
 	<footer>
 		
 	</footer>
