--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,24 +6,38 @@
 
     <script src="/vendor/jquery-1.10.2.min.js"></script>
     <script src="/vendor/jquery-ui-1.10.2.custom.min.js"></script>
-
+    <script type="text/javascript">
+      $(document).ready(function() {
+        var userEmail = jQuery.parseJSON('<%- JSON.stringify(user) %>');
+               
+        if (userEmail) {
+          $('#log_form').html('<%- include logoutform.ejs %>')
+          .children('.user-email').text('Welcome ' + userEmail.email + '!!');
+        } else {
+          $('#log_form').html('<%- include loginform.ejs %>');
+        }
+      });
+    </script>
+   
     <link rel="stylesheet" href="css/login.css"/>
     <link rel="stylesheet" href="css/style.css">
   </head>
+  
   <body>
     <header>
       <a href="/"><img src="/imgs/logo" id="logo"/></a>
       <a href="/bucket"><img src="/imgs/bucket" class="nav"/></a>
       <a href="/mandal"><img src="/imgs/mandal" class="nav"/></a>
       <a href="/calendar"><img src="/imgs/calendar" class="nav"/></a>
-      <p><%= user %></p>
+      <p class="user-email"></p>
     </header>
     
     <section>
-      <div>
+      
+      <div class="logged" id="log_form">
         <form class="login_form" action="/login" method="POST">
-					<input type="text" placeholder="E-mail" id="email" name="email">
-					<input type="text" placeholder="Password" id="password" name="password">
+					<input type="email" placeholder="E-mail" id="email" name="email">
+					<input type="password" placeholder="Password" id="password" name="password">
 					
 					<p><a href="/forgot-passwd">forgot your password?</a></p>
 					<input type="submit" value="Log in" id="login">
