--- a/views/logoutform.ejs
+++ b/views/logoutform.ejs
@@ -1,1 +1,1 @@
-<form class="login_form" action="/login" method="POST"><a href="/logout"><input id="logout" value="Log Out"></button></a></form>
+<form class="login_form" action="/login" method="POST"><p class="user-email"></p><a href="/logout"><input id="logout" value="Log Out"></button></a></form>
