--- a/views/login.ejs
+++ b/views/login.ejs
@@ -30,7 +30,7 @@
             <a href="/forgot-passwd">forgot your password?</a>
           </p>
           <input type="submit" value="Log in" id="login">
-          <p><a href="/auth/facebook">Login with Facebook</a></p>
+          <p><a href="/auth/facebook">Sign in with Facebook</a></p>
           <p><a href="/auth/twitter">Sign in with Twitter</a></p>
           <p><a href="/auth/google">Sign In with Google</a></p>
         </form>
