--- a/views/logout.ejs
+++ b/views/logout.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>만다라트</title>
+    <title>한다라트</title>
 
     <script src="/vendor/jquery-1.10.2.min.js"></script>
     <script src="/vendor/jquery-ui-1.10.2.custom.min.js"></script>
