--- a/public/css/bucket.css
+++ b/public/css/bucket.css
@@ -1,21 +1,73 @@
-#nameOfTable{
-  font-size:20pt;
-  font-weight:bold;
-  margin-bottom:10px;
-  vertical-align:bottom;
+#logo{
+  width: 128px;
+  height: 128px;
+  float: left;
+  margin: 10px 0px 0px 10px;
 }
 
-.addButton{
-  margin-left:10px;
-  height:35px;
-  width:35px;
-  background-image:url(https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcT5VENVUE12jwA24Tvfyx8m-Cfx7Jj8C51w6RLgMg8MIocg2bNYIA) no-repeat;
-  cursor:pointer;
-  vertical-align:bottom;
+.header_icon{
+  width: 128px;
+  height: 128px;
+  display: inline-block;
+  float: right;
+  margin-right: 5%;
 }
-
-#tableOfBucketList{
-  margin:auto;
-  width:80%;
+section{
+  clear: both;
+  padding-top: 50px;
+}
+.tableBtn{
+  margin-top: 8%;
+}
+thead{
   text-align: center;
+}
+table{
+  margin-top: 3%;
+  width: 44%;
+  margin-left: 25%;
+  border-collapse: collapse;
+}
+td{
+  padding: 0 0 0 0;
+}
+input{
+  width: 99%;
+  height: 99%;
+  margin: 0 0 0 0;
+  border: none;
+}
+#addList{
+  width: 100%;
+}
+td{
+  text-align: center;
+}
+input:hover{
+  background-color: #EEE;
+}
+.button {
+  float: left;
+  margin-left: 42%;
+  display: inline-block;
+}
+button{
+  display:inline-block;
+  float: right;
+  margin-right: 1.5%;
+  width: 100px;
+  height: 100px;
+  border-radius: 90px;
+  font-size: 25px;
+  border: none;
+  color: #fff;
+  background-color: #5CD1E5;
+  transition-duration: 0.5s;
+  }
+
+button:hover{
+  box-shadow: 0px 3px 2px #d5d5d5;
+  background-color: #EEEEEE;
+  color: #5CD1E5;
+  cursor: pointer;
 }
