--- a/public/css/mandal_main.css
+++ b/public/css/mandal_main.css
@@ -1,65 +1,94 @@
+
+#else-container{
+  position: absolute;
+  right:0;
+  left:0;
+  z-index:9999;
+}
+
+#bg{
+  position: fixed;
+  display:block;
+  width:100%;
+  height:100%;
+  background-image: url('../imgs/background.jpg');
+  background-size:cover;
+  padding: 0px;
+  margin: 0px;
+
+  -webkit-filter: blur(2px);
+  -moz-filter: blur(2px);
+  -o-filter: blur(2px);
+  -ms-filter: blur(2px);
+  filter: blur(2px);
+
+  left: 0;
+  right: 0;
+  top: 0;
+}
+
+
+/*#header-back{
+  margin-top: 50px;
+  max-resolution: 0px;
+  height:128px;
+  background-color: rgba(255,255,255,0.8);
+}*/
+
 .zoomViewport{
-    border: 3px solid blue;
-    float : left;
-    margin: 10px;
-    padding: 10px;
-    max-width: 570px;
-    max-height: 570px;
+    /*border: 3px;*/
+    /*float : left;*/
+    margin: auto;
+    /*padding: 10px;*/
+    max-width: 660px;
+    max-height: 660px;
     overflow: hidden;
-    position: relative;
-    background-color: cyan;
-}  
+    /*position: relativ;*/
+    margin-top:150px;
+}
 
 #mandal-container {
-	width: 550px;
-	height: 550px;
-    padding: 10px;
-    margin: 5px;
+    /*margin:auto;*/
+	  width: 660px;
+	  height: 660px;
+    /*padding: 10px;*/
+    /*margin: 5px;*/
 }
 
 .mandal-top, .mandal-center, .mandal-mid, .mandal-bot{
-    width: 170px;
-    height: 170px;
-    margin: 5px;
+    width: 180px;
+    height: 180px;
+    margin: 20px;
     float: left;
 }
 
 .mandal-table {
-    border-collapse:collapse;
-    border-spacing:0;
+    /*border-collapse:collapse;*/
+    border-spacing: 1px;
 }
 
 .mandal-table td {
-    border-style:solid;
-    border-width:1px;
-    max-width: 54px;
-    max-height: 54px;
-    
+  /*border-style:solid;*/
+    /*border-width: 1px;*/
+    max-width: 55px;
+    max-height: 55px;
     position: relative;
+
+    border-radius: 10px;
 }
 
 .table-article {
-    height: 53px;
+    height: 55px;
     width: 55px;
-    
+
     background-color: white;
-    
+
     font-family:Arial, sans-serif;
     font-size:80%;
-    font-weight:normal;
-    border-style:solid;
-    border-width:1px;
-    max-width: 54px;
-    max-height: 54px;
-    overflow:hidden; 
-    white-space: nowrap;
-    text-overflow:ellipsis;
-    table-layout:fixed;
-    word-break:break-all;	
-}
-
-.text-field {
-    overflow:hidden; 
+    /*font-weight:normal;*/
+    /*border-style:solid;*/
+    /*border-width:1px;*/
+    overflow:hidden;
     white-space: nowrap;
     text-overflow:ellipsis;
     table-layout:fixed;
@@ -67,32 +96,31 @@
 }
 
 .text-field {
-    height: 53px;
+    height: 55px;
     width: 55px;
     font-weight:normal;
     font-family:Arial, sans-serif;
     font-size: 80%;
-    
+
     text-align:center;
     vertical-align: middle;
-        
-    overflow:hidden; 
-    text-overflow:ellipsis; 
-                
+
+    overflow:hidden;
+    /*text-overflow:ellipsis;*/
+
     table-layout:fixed;
     word-break:break-all;
     resize: none;
-    
-    display: table-cell;
 
+    display: table-cell;
 }
 
 .input-button {
     position: absolute;
     bottom: 1px;
-    
+
     float: right;
-    
+
     height: 20%;
     width: 3%;
     display: table-cell;
