--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,7 +18,9 @@
   position: fixed;
   display: block;
   width:100%;
-  background-color: rgba(255,255,255,0.8);
+  background-color: rgba(255,255,255,0.95);
   height:128px;
   top:20;
+
+  z-index: 3000;
 }
