--- a/views/mandal_main.ejs
+++ b/views/mandal_main.ejs
@@ -135,21 +135,21 @@
 							<div class='mandal-center'>
 								<table class="mandal-table">
 									<tr>
-									<td class="table-article zoomTarget" id="mandal-zoom1"></td>
-									<td class="table-article zoomTarget" id="mandal-zoom2"></td>
-									<td class="table-article zoomTarget" id="mandal-zoom3"></td>
+									<td class="table-article zoomTarget subGoal" id="mandal-zoom1"></td>
+									<td class="table-article zoomTarget subGoal" id="mandal-zoom2"></td>
+									<td class="table-article zoomTarget subGoal" id="mandal-zoom3"></td>
 									</tr>
 
 									<tr>
-									<td class="table-article zoomTarget" id="mandal-zoom4"></td>
-									<td class="table-article zoomTarget" id="zoom-center"></td>
-									<td class="table-article zoomTarget" id="mandal-zoom5"></td>
+									<td class="table-article zoomTarget subGoal" id="mandal-zoom4"></td>
+									<td class="table-article zoomTarget subGoal" id="zoom-center"></td>
+									<td class="table-article zoomTarget subGoal" id="mandal-zoom5"></td>
 									</tr>
 
 									<tr>
-									<td class="table-article zoomTarget" id="mandal-zoom6"></td>
-									<td class="table-article zoomTarget" id="mandal-zoom7"></td>
-									<td class="table-article zoomTarget" id="mandal-zoom8"></td>
+									<td class="table-article zoomTarget subGoal" id="mandal-zoom6"></td>
+									<td class="table-article zoomTarget subGoal" id="mandal-zoom7"></td>
+									<td class="table-article zoomTarget subGoal" id="mandal-zoom8"></td>
 									</tr>
 								</table>
 							</div>
