--- a/public/css/mandal_main.css
+++ b/public/css/mandal_main.css
@@ -124,9 +124,9 @@
 }
 
 .subGoal, .center{
-  background-color: #6FF8F5;
+  background-color: #A3C86E;
 }
 
 #zoom-center {
-    background-color: #FFF1F2;
+    background-color: #A3B889;
 }
