--- a/views/mandal_make.ejs
+++ b/views/mandal_make.ejs
@@ -6,6 +6,7 @@
 
     <link rel="stylesheet" href="/css/mandal_make.css">
     <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="stylesheet" href="/css/mandal_main.css">
 
     <script src="vendor/jquery-1.10.2.min.js"></script>
     <script src="vendor/jquery-ui-1.10.2.custom.min.js"></script>
@@ -25,12 +26,15 @@
 
     <section>
       <img src="imgs/plus.png" id="addbtn"/>
-      <ul >
+      <ul>
         <li><a href="/mandal_template"><img src="imgs/select_circle.png" class="selector" id="circle"/></a></li>
         <li><img src="imgs/select_triangle.png" class="selector" id="triangle"/></li>
         <li><a href="/mandal/main"><img src="imgs/select_square.png" class="selector" id="square"/></a></li>
       </ul>
-<!-- 계시물의 개수를 받아 for문을 돌려 이미지를 출력해준다. -->
+<!-- 게시물의 개수를 받아 for문을 돌려 이미지를 출력해준다. -->
+      <div class="preview"></div>
+      <div class="preview"></div>
+      <div class="preview"></div>
 
     </section>
 
