--- a/views/day_calendar.ejs
+++ b/views/day_calendar.ejs
@@ -17,21 +17,20 @@
     </head>
     
     <body>        
-      <svg id="graph">
-          <foreignobject id="percentage" x="150" y="150" width="100" height="100">
-              <div style="border:1px green solid">HANDART</div>
-          </foreignobject>
-      </svg>
+    <svg id="graph" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" >
+        <foreignobject id="percentage" x="240" y="230">
+        </foreignobject>
+   </svg>
       
       <!-- 후에는 편집 페이지를 따로 만들고 save, detail 버튼 추가 // 처음 일정 추가 시에는 create 버튼 -->
         <!-- Create & Save Modal -->
-        <div class="modal fade" id="createModal" role="dialog">
+        <div class="modal fade" id="editModal" role="dialog">
             <div class="modal-dialog">
         
                 <!-- Modal content -->
                 <div id="modal-content">
                     <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <button type="button" class="close" data-dismiss="modal" id="close" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                     </div>
                 </div>
                 
@@ -40,8 +39,8 @@
                 <fieldset>
                     <div class="modal-body">
                     <ul class="nav nav-list">
-                <li class="nav-header">Title</li>
-                <li><input class="input-xlarge" type="text" id="label"></li>
+                        <li class="nav-header">Title</li>
+                        <li><input class="input-xlarge" type="text" id="event_name"></li>
                     </ul> 
                     </div>
                 </fieldset>
@@ -49,15 +48,13 @@
                 </div>
                 
                 <div class="modal-footer">
-                    <button class="btn btn-primary" data-option="save" id="save" >Save</button>
-                    <button class="btn btn-danger" data-option="remove" id="remove">Remove</button>
+                    <button class="btn btn-primary" data-dismiss="modal" id="save" >Save</button>
+                    <button class="btn btn-danger" data-dismiss="modal" id="remove">Remove</button>
                 </div>
             
             </div>
         </div>  
 
-
-        
         <script src = "day_calendar.js"></script>
      </body>
 </html>
